# panic-lang

./: .gitignore  Cargo.toml  LICENSE-MIT  PanicLexer.g4  PanicParser.g4  README.md  go.mod  go.sum  main.go
.github/workflows/: code-coverage.yaml  static-analysis.yaml  unit-tests.yaml
compiler/: NOTICE
compiler/rustc_lexer/src/: lib.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: anxious_bitwise_int.rs  anxious_int.rs  lib.rs  nominal_int.rs  panic.rs
src/: error.rs  errors.rs  eval.rs  lexer.rs  lib.rs  main.rs  panic.pest  parser.rs  runtime.rs  test.rs  types.rs  value.rs
src/compiler/: errors.rs  main.rs  mod.rs  operators.rs  types.rs
src/interpreter/: declaration.rs  environment.rs  evaluate.rs  main.rs  value.rs
src/parser/: display.rs  mod.rs  peg_grammar.rs  syntax_tree.rs
src/types/: anxious.rs  bool.rs  int32.rs  mod.rs  nominal_bool.rs  nominal_int32.rs  nominal_unit.rs  panic.rs  unit.rs
tests/invalid/: arithmetic1.panic  arithmetic2.panic  arithmetic3.panic  compare.ack
tests/valid/: arithmetic.panic  boolean.panic  conditions.panic  factorial.ack  factorial.panic  hello.ok  pemdas.ack  pemdas.ok  statements.panic  type_expr.panic  types.panic
