[package]
name = "panic-lang"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pani"
path = "src/interpreter/main.rs"

[[bin]]
name = "panic"
path = "src/compiler/main.rs"

[dependencies]
clap = { version = "4.5", features = [ "derive" ] }
num-bigint = "0.4"
pest = "2.7"
pest_derive = "2.7"
pest_ascii_tree = "0.1"
thiserror = "1"
thiserror-ext = "0.2.0"
