[package]
name = "panic-lang"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pani"
path = "src/interpreter/main.rs"

[dependencies]
logos = {version = "0.16", features = [ "forbid_unsafe" ] }
miette = { version = "7.6", features = [ "fancy" ] }
num-bigint = "0.4"
ordermap = "1"
thiserror = "2"
